--- a/Projeto-3-Trimestre-main/index.html
+++ b/Projeto-3-Trimestre-main/index.html
@@ -43,12 +43,15 @@
     <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
     <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
     <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
+    <audio src="sounds/A.mp3" id="som_tecla_A"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
     <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
+    <audio src="sounds/oof.mp3" id="som_tecla_oof"></audio>
     <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
     <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio src="sounds/PipeFalling.mp3" id="som_tecla_Pipe"></audio>
 
 </body>
 </html>
